--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,9 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
+    "three": "^0.175.0",
+    "troika-three-text": "^0.52.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -47,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/three": "^0.175.0"
   }
 }
