--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "react-spinners": "^0.15.0",
     "three": "^0.175.0",
     "troika-three-text": "^0.52.4",
