--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@uploadthing/react": "^7.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.3.0",
@@ -26,6 +27,7 @@
     "three": "^0.175.0",
     "troika-three-text": "^0.52.4",
     "typescript": "^4.9.5",
+    "uploadthing": "^7.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
