setup Postgres for local dev

--- a/backend/alembic.ini
+++ b/backend/alembic.ini
@@ -63,9 +63,13 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-#sqlalchemy.url = driver://user:pass@localhost/dbname
-sqlalchemy.url = sqlite:///./test.db
-; sqlalchemy.url = postgresql://username:password@localhost/ph_navigator
+# ----------------------------------------------------------------------------------------------------------------------
+# -- local Dev
+# sqlalchemy.url = sqlite:///./test.db 
+
+# -- local Dev: Postges
+sqlalchemy.url = "postgresql://ph_navigator_user:G0zcuo9i6ffYCRfEGMuHQ8jqEyzs0MJ4@localhost:5432/ph_navigator" 
+
 
 [post_write_hooks]
 # post_write_hooks defines scripts or Python functions that are run
