--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,6 +4,7 @@ cryptography
 fastapi
 google-cloud-storage
 httpx
+httptools
 honeybee-ph
 honeybee-ref
 passlib
@@ -22,3 +23,4 @@ rich
 sqlalchemy
 slowapi
 uvicorn
+uvloop 
