--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
         "@types/react": "^19.0.10",
         "@types/react-dom": "^19.0.4",
         "@uploadthing/react": "^7.3.1",
+        "html2canvas": "^1.4.1",
+        "html2pdf.js": "^0.10.3",
+        "jspdf": "^3.0.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-router-dom": "^7.3.0",
