--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "markdown-to-jsx": "^7.7.7",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-flip-toolkit": "^7.2.4",
         "react-router-dom": "^7.3.0",
         "react-scripts": "5.0.1",
         "react-select": "^5.10.1",
